<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
           android:id="@+id/grupo1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_asir"
            android:icon="@drawable/ic_asir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/menu_asir" />
        <item
            android:id="@+id/nav_daw"
            android:icon="@drawable/ic_daw"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_dam"
            android:icon="@drawable/ic_dam"
            android:title="@string/menu_gallery" />
    </group>
    <group
        android:id="@+id/grupo2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visible="true">
        <item
            android:id="@+id/nav_acerca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_acerca" />
    </group>
</menu>